# velosearch

./: .gitignore  Cargo.toml  bench.fish  bench.sh  nohup.out  test.json  wiki_00.json
adaptive_hybrid_trie/: Cargo.toml
adaptive_hybrid_trie/src/: lib.rs
adaptive_hybrid_trie/src/ah_trie/: adaptation_manager.rs  ah_trie.rs  mod.rs
benches/: bitmap_vs_sorted.rs  short_circuit.rs  sorted_list_intersection.rs  vectorized_codegen.rs
cranelift/: .cargo_vcs_info.json  Cargo.toml
cranelift_jit/: .cargo_vcs_info.json  Cargo.toml
cranelift_jit/src/: backend.rs
cranelift_module/: .cargo_vcs_info.json  Cargo.toml
cranelift_native/: .cargo_vcs_info.json  Cargo.toml
learned_term_idx/: Cargo.toml
learned_term_idx/src/: lib.rs
src/: lib.rs  main.rs
src/batch/: mod.rs  posting_batch.rs
src/context/: boolean_context.rs
src/datasources/: posting_table.rs
src/index/: boolean_query_handler.rs  handler.rs  mod.rs  posting_handler.rs  splitbase.rs  tantivy_handler.rs
src/jit/: api.rs  ast.rs  compile.rs  jit.rs  mod.rs
src/optimizer/: mod.rs
src/optimizer/logical_optimizer/: mod.rs  push_down_projection.rs  rewrite_boolean_predicate.rs
src/optimizer/physical_optimizer/: intersection_selection.rs  min_operation_range.rs  mod.rs  partition_predicate_reorder.rs  primitives_combination.rs
src/optimizer/planner/: boolean_planner.rs
src/physical_expr/: boolean_eval.rs  count_udf.rs  mod.rs  short_circuit_primitives.rs
src/query/: boolean_query.rs
src/utils/: array.rs  avx512.rs  builder.rs  err.rs  json.rs  mod.rs
