[package]
name = "fastfull-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = {path="../arrow-datafusion/datafusion/core", features=["simd"]}
tokio = {version="1.0", features=["macros", "rt", "rt-multi-thread", "sync", "parking_lot"]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
failure = "0.1.5"
rand = "0.8.5"
clap = {version = "4.1", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

futures = "0.3"
