[package]
name = "fastfull-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["learned_term_idx"]

[dependencies]
datafusion = {path="../arrow-datafusion/datafusion/core", features=["simd"]}
# datafusion = "22.0.0"
tokio = {version="1.0", features=["macros", "rt", "rt-multi-thread", "sync", "parking_lot"]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
failure = "0.1.5"
rand = "0.8.5"
clap = {version = "4.1", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
threadpool = "1.8.0"
futures = "0.3"
rayon = "1.7"
chrono = "0.4"
parking_lot = "0.12"
packed_simd_2 = "0.3.8"
learned_term_idx = {path="learned_term_idx"}
tantivy = "0.19"