[package]
name = "fastfull-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["adaptive_hybrid_trie"]

[features]
default = ["trie_idx"]
hash_idx = ["adaptive_hybrid_trie/hash_idx"]
trie_idx = ["adaptive_hybrid_trie/trie_idx"]

[dependencies]
datafusion = {path="../arrow-datafusion/datafusion/core", features=["simd"]}
# datafusion = "22.0.0"
tokio = {version="1.0", features=["macros", "rt", "rt-multi-thread", "sync", "parking_lot"]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
failure = "0.1.5"
rand = "0.8.5"
clap = {version = "4.1", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
threadpool = "1.8.0"
futures = "0.3"
rayon = "1.7"
chrono = "0.4"
parking_lot = "0.12"
packed_simd_2 = "0.3.8"
adaptive_hybrid_trie = {path="adaptive_hybrid_trie"}
tantivy = "0.19"
criterion = {version = "0.5", features = ["html_reports"]}
sorted-iter = "0.1.11"
cranelift = "0.97"
cranelift-jit = "0.97"
cranelift-module = "0.97"
cranelift-native = "0.97"
lazy_static = "1.4"

[[bench]]
name = "arrow_bitwise_and"
harness = false

[[bench]]
name = "hashset_intersection"
harness = false

[[bench]]
name = "hashset_withoutbuild"
harness = false

[[bench]]
name = "sorted_list_intersection"
harness = false

[[bench]]
name = "bitmap_vs_sorted"
harness = false

[[bench]]
name = "vectorized_codegen"
harness = false