[package]
name = "adaptive_hybrid_trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["hash_idx"]
hash_idx = []
trie_idx = []

[dependencies]
fst-rs = { path = "../../FST-rs" }
dashmap = "^5.4"
art-tree = { path = "../../art-rs" }